--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Robocode Marketplace</h1>
         <div id="cart">
             <button id="cart-button" onclick="openCart()">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Fru%2Ffree-icon%2Fcart_5166615&psig=AOvVaw23W6hd1MKpM_aBdchwbVG8&ust=1733151521526000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLCkk9nqhooDFQAAAAAdAAAAABAE" alt="cart">
+                <img src="https://cdn-icons-png.flaticon.com/512/1374/1374128.png" alt="cart">
             </button>
             <div id="cart-products" class="hide">
                 Cart is empty
